<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4A8A8"
    tools:context=".cadastro">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hora de Doar"
        android:textSize="39dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>
    <ImageView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:src="@drawable/cooracao"
        android:padding="1dp"
        android:layout_marginEnd="4dp"/>

    <EditText
        android:id="@+id/txtNomeCompleto"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:maxLines="1"
        android:minHeight="400dp"
        android:padding="5dp"
        android:hint="@string/nome_completo"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtDataNascimento"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:hint="Data Nascimento"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="number"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:hint="Telefone"
        android:textSize="20dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtTipoSanguineo"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:hint="@string/tipo_sanguineo"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:hint="E-mail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtConfimarEmail"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:hint="Confirmar E-mail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="5dp"
        android:hint="@string/senha"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtConfirmaSenha"
        android:layout_width="380dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:maxLines="1"
        android:minHeight="4dp"
        android:padding="5dp"
        android:hint="Confirmar Senha"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck" />


    <RadioButton
        android:id="@+id/notificacao"
        android:layout_width="300dp"
        android:layout_height="32dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:minLines="1"
        android:text="@string/receber_notifica_o_email"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton

        android:id="@+id/politica"
        android:layout_width="300dp"
        android:layout_height="32dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:minLines="1"
        android:text="@string/eu_concordo_com_a_pol_tica_de_privacidade"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#E3402A"
        android:minHeight="30dp"
        android:text="@string/cadastrar"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />




</LinearLayout>